# cellseer

./: .gitignore  .gitignore~  2_53_vectors.txt  BoW_data.csv  CMakeLists.txt  Cell Classification Talk.odp  Cell Classification Talk.pptx  MDPA_sim.csv  README.md  accuracy.ods  binary2csv  binary2csv.py  binaryRead.py  cellSeer.py  centroidFinder.py  centroidFinderP.py  chi_sim.csv  chi_square>maker.py  clusterNeurons.py  contributors.txt  convertBinarySpin.py  cosine_sim.csv  cvTest.py  dataConverter.py  dataMaker.py  earthMover.py  example_spin_images.cpp  hist_intersect_similarity.csv  hist_intersect_similarity.py  hist_intersect_similarity_normed.csv  kfold.py  kmeans.py  loo.py  makeSpin.py  n.model  names_and_counts.txt  neuronData  notes.txt  output.txt  picksIndex.txt  (+6 more)
Fisher/: BoW_labels.csv  buildOBJ.m  codes.mat  fisher_cluster.py  flatten.mlx  flatten.py  getAndSave.m  importCSVfile.m  junk2.csv  loadNotPicked.m  loadSWC.m  loadSpinImage.m  n.model  names60.csv  points2cylinder.m  saveobjmesh.m  spinSorter.py  spinner.m  swc2obj.m
Fisher/Notes/: notes.txt
Fisher/small_test_swcs/: 2002-12-02-A-L23-dendax.CNG.swc  20120516-16-18.CNG.swc  A7a1AKE.CNG.swc  ACELL324.CNG.swc  AP030107-5-2.CNG.swc  C150600B-I1.CNG.swc  JM011504-10-1.CNG.swc  LY32-RGC30.CNG.swc  M062105SL2.CNG.swc  cell-119-trace.swc
talk/: Cell Classification Talk.odp  FisherVector.odp  cell_discovery_summary_new_v1.docx
